[package]
name = "network_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
netflow_parser = "0.4.7"
neo4rs = "0.8.0"
pcap-file = "2.0.0-rc1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }